Accounting (#96)
* init commit

* accounting for register

* inbound accounting

* sales fix

* customer return accounting

* the change

* the change

---------

Co-authored-by: Fahad Ali <imf_ali@Fahads-MacBook-Air.local>