@@ -1,37 +1,51 @@
 package com.inventory.accounting.rest.controller;
 
-import com.inventory.accounting.domain.model.PartyType;
-import com.inventory.accounting.rest.dto.mapping.AccountingMapper;
-import com.inventory.accounting.rest.dto.request.CreateGlAccountRequest;
-import com.inventory.accounting.rest.dto.request.PostJournalLineRequest;
-import com.inventory.accounting.rest.dto.request.PostJournalRequest;
-import com.inventory.accounting.rest.dto.response.GlAccountResponse;
-import com.inventory.accounting.rest.dto.response.AccountingShopSummaryDto;
-import com.inventory.accounting.rest.dto.response.JournalEntryResponse;
-import com.inventory.accounting.rest.dto.response.JournalListResponse;
-import com.inventory.accounting.rest.dto.response.SubledgerEntriesPageResponse;
-import com.inventory.accounting.rest.dto.response.SubledgerPartyBalanceResponse;
-import com.inventory.accounting.service.AccountingReadService;
-import com.inventory.accounting.service.GlAccountWriteService;
-import com.inventory.accounting.service.GlBootstrapService;
-import com.inventory.accounting.service.PostingService;
-import com.inventory.accounting.service.PostingService.PostingLineDraft;
-import com.inventory.accounting.service.SubledgerService;
-import com.inventory.accounting.service.TrialBalanceQueryService;
-import com.inventory.accounting.domain.model.GlAccount;
+import com.inventory.accounting.api.AccountingFacade;
+import com.inventory.accounting.api.PostJournalLine;
+import com.inventory.accounting.api.PostJournalRequest;
+import com.inventory.accounting.domain.model.Account;
 import com.inventory.accounting.domain.model.JournalEntry;
-import com.inventory.accounting.domain.model.SubledgerEntry;
+import com.inventory.accounting.domain.model.JournalSource;
+import com.inventory.accounting.domain.model.LedgerEntry;
+import com.inventory.accounting.domain.model.PartyType;
+import com.inventory.accounting.rest.dto.request.CreateAccountRequest;
+import com.inventory.accounting.rest.dto.request.CreateJournalEntryRequest;
+import com.inventory.accounting.rest.dto.request.OpeningBalanceRequest;
+import com.inventory.accounting.rest.dto.request.ReverseJournalRequest;
+import com.inventory.accounting.rest.dto.request.UpdateAccountRequest;
+import com.inventory.accounting.rest.dto.response.AccountResponse;
+import com.inventory.accounting.rest.dto.response.BalanceSheetResponse;
+import com.inventory.accounting.rest.dto.response.ProfitAndLossResponse;
+import com.inventory.accounting.rest.dto.response.JournalEntriesPageResponse;
+import com.inventory.accounting.rest.dto.response.JournalEntryResponse;
+import com.inventory.accounting.rest.dto.response.LedgerEntryResponse;
+import com.inventory.accounting.rest.dto.response.LedgerPageResponse;
+import com.inventory.accounting.rest.dto.response.PartyStatementResponse;
+import com.inventory.accounting.rest.dto.response.PartySummariesResponse;
+import com.inventory.accounting.rest.dto.response.TrialBalanceResponse;
+import com.inventory.accounting.service.AccountService;
+import com.inventory.accounting.service.AccountingBackfillService;
+import com.inventory.accounting.service.AccountingMapper;
+import com.inventory.accounting.service.JournalQueryService;
+import com.inventory.accounting.service.LedgerService;
+import com.inventory.accounting.service.PartyLedgerService;
+import com.inventory.accounting.service.FinancialReportsService;
+import com.inventory.accounting.service.JournalRequestMapper;
+import com.inventory.accounting.service.TrialBalanceService;
 import com.inventory.common.constants.ErrorCode;
 import com.inventory.common.dto.response.ApiResponse;
 import com.inventory.common.exception.AuthenticationException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.validation.Valid;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
+import java.time.LocalDate;
+import java.util.List;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
+import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.ResponseEntity;
 import org.springframework.util.StringUtils;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -39,161 +53,248 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
-
+/** Public REST surface for the accounting module. All endpoints are shop-scoped. */
 @RestController
 @RequestMapping("/api/v1/accounting")
-@Slf4j
+@RequiredArgsConstructor
 public class AccountingController {
 
-  @Autowired private GlBootstrapService glBootstrapService;
+  private final AccountService accountService;
+  private final JournalQueryService journalQueryService;
+  private final LedgerService ledgerService;
+  private final PartyLedgerService partyLedgerService;
+  private final TrialBalanceService trialBalanceService;
+  private final AccountingFacade accountingFacade;
+  private final AccountingBackfillService backfillService;
+  private final FinancialReportsService financialReportsService;
 
-  @Autowired private AccountingReadService accountingReadService;
+  // ---------------------------------------------------------------------------------------------
+  // Chart of Accounts
+  // ---------------------------------------------------------------------------------------------
 
-  @Autowired private PostingService postingService;
-
-  @Autowired private SubledgerService subledgerService;
-
-  @Autowired private TrialBalanceQueryService trialBalanceQueryService;
-
-  @Autowired private GlAccountWriteService glAccountWriteService;
-
-  /** Resolve effective shop filter and journal cardinality (troubleshooting / multi-shop drift). */
-  @GetMapping("/shop-summary")
-  public ResponseEntity<ApiResponse<AccountingShopSummaryDto>> shopSummary(HttpServletRequest httpRequest) {
-    String shopId = resolveShop(httpRequest);
-    long chart = accountingReadService.countChartAccounts(shopId);
-    long journals = accountingReadService.countJournals(shopId);
-    return ResponseEntity.ok(
-        ApiResponse.success(new AccountingShopSummaryDto(shopId, chart, journals)));
+  @GetMapping("/accounts")
+  public ResponseEntity<ApiResponse<List<AccountResponse>>> listAccounts(
+      HttpServletRequest request) {
+    String shopId = resolveShop(request);
+    List<AccountResponse> rows =
+        accountService.list(shopId).stream().map(AccountingMapper::toResponse).toList();
+    return ResponseEntity.ok(ApiResponse.success(rows));
   }
 
-  /** Idempotent starter — seeds default nominal accounts used by postings. */
-  @PostMapping("/chart/bootstrap")
-  public ResponseEntity<ApiResponse<Void>> bootstrapChart(HttpServletRequest httpRequest) {
-    String shopId = resolveShop(httpRequest);
-    glBootstrapService.ensureDefaultsForShop(shopId);
-    return ResponseEntity.ok(ApiResponse.success(null));
+  @PostMapping("/accounts")
+  public ResponseEntity<ApiResponse<AccountResponse>> createAccount(
+      @Valid @RequestBody CreateAccountRequest body, HttpServletRequest request) {
+    String shopId = resolveShop(request);
+    Account a =
+        accountService.create(
+            shopId, body.getCode(), body.getName(), body.getType(), body.getNormalBalance());
+    return ResponseEntity.ok(ApiResponse.success(AccountingMapper.toResponse(a)));
   }
 
-  @GetMapping("/gl-accounts")
-  public ResponseEntity<ApiResponse<List<GlAccountResponse>>> listAccounts(
-      HttpServletRequest httpRequest) {
-    String shopId = resolveShop(httpRequest);
-    List<GlAccount> chart = accountingReadService.listAccounts(shopId);
-    Map<String, TrialBalanceQueryService.DebitCreditTotals> totals =
-        trialBalanceQueryService.totalsByAccountId(shopId);
-    List<GlAccountResponse> dtos =
-        chart.stream()
-            .map(
-                a ->
-                    AccountingMapper.toResponse(
-                        a, totals.getOrDefault(a.getId(), TrialBalanceQueryService.DebitCreditTotals.zero())))
-            .collect(Collectors.toList());
-    return ResponseEntity.ok(ApiResponse.success(dtos));
+  @PatchMapping("/accounts/{id}")
+  public ResponseEntity<ApiResponse<AccountResponse>> updateAccount(
+      @PathVariable String id,
+      @Valid @RequestBody UpdateAccountRequest body,
+      HttpServletRequest request) {
+    String shopId = resolveShop(request);
+    Account a = accountService.update(shopId, id, body.getName(), body.getActive());
+    return ResponseEntity.ok(ApiResponse.success(AccountingMapper.toResponse(a)));
   }
 
-  /** Adds a shop-specific nominal account ({@code systemAccount=false}); built-in codes are reserved. */
-  @PostMapping("/gl-accounts")
-  public ResponseEntity<ApiResponse<GlAccountResponse>> createManualAccount(
-      @Valid @RequestBody CreateGlAccountRequest body, HttpServletRequest httpRequest) {
-    String shopId = resolveShop(httpRequest);
-    var saved = glAccountWriteService.createManualAccount(shopId, body);
-    return ResponseEntity.ok(
-        ApiResponse.success(
-            AccountingMapper.toResponse(saved, TrialBalanceQueryService.DebitCreditTotals.zero())));
-  }
+  // ---------------------------------------------------------------------------------------------
+  // Journal entries
+  // ---------------------------------------------------------------------------------------------
 
-  @PostMapping("/journals/manual")
-  public ResponseEntity<ApiResponse<JournalEntryResponse>> postManualJournal(
-      @Valid @RequestBody PostJournalRequest body, HttpServletRequest httpRequest) {
-    String shopId = resolveShop(httpRequest);
-    String userId = (String) httpRequest.getAttribute("userId");
-
-    List<PostingLineDraft> drafts =
-        body.getLines().stream().map(AccountingController::toDraft).collect(Collectors.toList());
-
-    JournalEntry entry =
-        postingService.postManualJournal(
-            shopId,
-            body.getJournalDate(),
-            body.getDescription(),
-            drafts,
-            userId,
-            body.getSourceKey());
-
-    return ResponseEntity.ok(ApiResponse.success(AccountingMapper.toResponse(entry)));
-  }
-
-  @GetMapping("/journals")
-  public ResponseEntity<ApiResponse<JournalListResponse>> listJournals(
+  @GetMapping("/journal-entries")
+  public ResponseEntity<ApiResponse<JournalEntriesPageResponse>> listJournal(
+      @RequestParam(required = false) JournalSource sourceType,
+      @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate from,
+      @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate to,
       @RequestParam(defaultValue = "0") int page,
       @RequestParam(defaultValue = "20") int size,
-      HttpServletRequest httpRequest) {
-    String shopId = resolveShop(httpRequest);
-    Page<JournalEntry> p = accountingReadService.pageJournals(shopId, page, size);
-    List<JournalEntryResponse> items =
-        p.getContent().stream().map(AccountingMapper::toResponse).collect(Collectors.toList());
-    JournalListResponse wrap =
-        new JournalListResponse(
-            items, p.getNumber(), p.getSize(), p.getTotalElements(), p.getTotalPages());
-    return ResponseEntity.ok(ApiResponse.success(wrap));
+      HttpServletRequest request) {
+    String shopId = resolveShop(request);
+    Page<JournalEntry> p = journalQueryService.list(shopId, sourceType, from, to, page, size);
+    List<JournalEntryResponse> entries =
+        p.getContent().stream().map(AccountingMapper::toResponse).toList();
+    JournalEntriesPageResponse out =
+        new JournalEntriesPageResponse(
+            entries, p.getNumber(), p.getSize(), p.getTotalElements(), p.getTotalPages());
+    return ResponseEntity.ok(ApiResponse.success(out));
   }
 
-  @GetMapping("/journals/{journalId}")
+  @GetMapping("/journal-entries/{id}")
   public ResponseEntity<ApiResponse<JournalEntryResponse>> getJournal(
-      @PathVariable String journalId, HttpServletRequest httpRequest) {
-    String shopId = resolveShop(httpRequest);
-    JournalEntry j = accountingReadService.getJournal(shopId, journalId);
-    return ResponseEntity.ok(ApiResponse.success(AccountingMapper.toResponse(j)));
+      @PathVariable String id, HttpServletRequest request) {
+    String shopId = resolveShop(request);
+    JournalEntry e = journalQueryService.getOrThrow(shopId, id);
+    return ResponseEntity.ok(ApiResponse.success(AccountingMapper.toResponse(e)));
   }
+
+  @PostMapping("/journal-entries")
+  public ResponseEntity<ApiResponse<JournalEntryResponse>> createManualJournal(
+      @Valid @RequestBody CreateJournalEntryRequest body, HttpServletRequest request) {
+    String shopId = resolveShop(request);
+    String userId = (String) request.getAttribute("userId");
+
+    PostJournalRequest req = new PostJournalRequest();
+    req.setSourceType(JournalSource.MANUAL);
+    req.setTxnDate(body.getTxnDate());
+    req.setNarration(body.getNarration());
+    req.setLines(JournalRequestMapper.fromManual(body));
+
+    JournalEntry posted = accountingFacade.post(shopId, userId, req);
+    return ResponseEntity.ok(ApiResponse.success(AccountingMapper.toResponse(posted)));
+  }
+
+  @PostMapping("/opening-balances")
+  public ResponseEntity<ApiResponse<JournalEntryResponse>> postOpeningBalance(
+      @Valid @RequestBody OpeningBalanceRequest body, HttpServletRequest request) {
+    String shopId = resolveShop(request);
+    String userId = (String) request.getAttribute("userId");
+
+    PostJournalRequest req = new PostJournalRequest();
+    req.setSourceType(JournalSource.OPENING_BALANCE);
+    req.setSourceId("opening");
+    req.setSourceKey("OPENING_BALANCE:" + shopId);
+    req.setTxnDate(body.getTxnDate());
+    req.setNarration(
+        body.getNarration() != null && !body.getNarration().isBlank()
+            ? body.getNarration().trim()
+            : "Opening balances");
+    req.setLines(JournalRequestMapper.fromOpening(body));
+
+    JournalEntry posted = accountingFacade.post(shopId, userId, req);
+    return ResponseEntity.ok(ApiResponse.success(AccountingMapper.toResponse(posted)));
+  }
+
+  @GetMapping("/opening-balances/status")
+  public ResponseEntity<ApiResponse<JournalEntryResponse>> openingBalanceStatus(
+      HttpServletRequest request) {
+    String shopId = resolveShop(request);
+    return accountingFacade
+        .findBySource(shopId, JournalSource.OPENING_BALANCE, "opening")
+        .map(e -> ResponseEntity.ok(ApiResponse.success(AccountingMapper.toResponse(e))))
+        .orElse(ResponseEntity.ok(ApiResponse.success(null)));
+  }
+
+  @PostMapping("/journal-entries/{id}/reverse")
+  public ResponseEntity<ApiResponse<JournalEntryResponse>> reverseJournal(
+      @PathVariable String id,
+      @Valid @RequestBody(required = false) ReverseJournalRequest body,
+      HttpServletRequest request) {
+    String shopId = resolveShop(request);
+    String userId = (String) request.getAttribute("userId");
+    String reason = body != null ? body.getReason() : null;
+    JournalEntry reversal = accountingFacade.reverse(shopId, userId, id, reason);
+    return ResponseEntity.ok(ApiResponse.success(AccountingMapper.toResponse(reversal)));
+  }
+
+  // ---------------------------------------------------------------------------------------------
+  // Ledger
+  // ---------------------------------------------------------------------------------------------
+
+  @GetMapping("/ledger/{accountId}")
+  public ResponseEntity<ApiResponse<LedgerPageResponse>> ledger(
+      @PathVariable String accountId,
+      @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate from,
+      @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate to,
+      @RequestParam(defaultValue = "0") int page,
+      @RequestParam(defaultValue = "50") int size,
+      HttpServletRequest request) {
+    String shopId = resolveShop(request);
+    LedgerService.Result r = ledgerService.list(shopId, accountId, from, to, page, size);
+    Page<LedgerEntry> p = r.entries();
+    LedgerPageResponse resp =
+        new LedgerPageResponse(
+            AccountingMapper.toResponse(r.account()),
+            p.getContent().stream().map(AccountingMapper::toResponse).toList(),
+            p.getNumber(),
+            p.getSize(),
+            p.getTotalElements(),
+            p.getTotalPages());
+    return ResponseEntity.ok(ApiResponse.success(resp));
+  }
+
+  // ---------------------------------------------------------------------------------------------
+  // Parties (subsidiary ledger for vendors / customers — control account is Sundry Creditors /
+  // Sundry Debtors in the GL; per-party detail is sliced here by partyType + partyRefId.)
+  // ---------------------------------------------------------------------------------------------
+
+  @GetMapping("/parties")
+  public ResponseEntity<ApiResponse<PartySummariesResponse>> listParties(
+      @RequestParam PartyType type,
+      @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate from,
+      @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate to,
+      HttpServletRequest request) {
+    String shopId = resolveShop(request);
+    PartyLedgerService.PartySummary s = partyLedgerService.listParties(shopId, type, from, to);
+    return ResponseEntity.ok(ApiResponse.success(AccountingMapper.toResponse(s)));
+  }
+
+  @GetMapping("/parties/{type}/{partyRefId}/statement")
+  public ResponseEntity<ApiResponse<PartyStatementResponse>> partyStatement(
+      @PathVariable PartyType type,
+      @PathVariable String partyRefId,
+      @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate from,
+      @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate to,
+      @RequestParam(defaultValue = "0") int page,
+      @RequestParam(defaultValue = "50") int size,
+      HttpServletRequest request) {
+    String shopId = resolveShop(request);
+    PartyLedgerService.Statement st =
+        partyLedgerService.statement(shopId, type, partyRefId, from, to, page, size);
+    return ResponseEntity.ok(ApiResponse.success(AccountingMapper.toResponse(st)));
+  }
+
+  // ---------------------------------------------------------------------------------------------
+  // Reports
+  // ---------------------------------------------------------------------------------------------
 
   @GetMapping("/reports/trial-balance")
-  public ResponseEntity<ApiResponse<List<TrialBalanceQueryService.TrialBalanceLine>>> trialBalance(
-      HttpServletRequest httpRequest) {
-    String shopId = resolveShop(httpRequest);
-    glBootstrapService.ensureSeedAccountsOnly(shopId);
-    return ResponseEntity.ok(ApiResponse.success(trialBalanceQueryService.computeTrialBalance(shopId)));
+  public ResponseEntity<ApiResponse<TrialBalanceResponse>> trialBalance(
+      @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate asOf,
+      HttpServletRequest request) {
+    String shopId = resolveShop(request);
+    TrialBalanceService.TrialBalance tb = trialBalanceService.asOf(shopId, asOf);
+    return ResponseEntity.ok(ApiResponse.success(AccountingMapper.toResponse(tb)));
   }
 
-  @GetMapping("/subledger/balance")
-  public ResponseEntity<ApiResponse<SubledgerPartyBalanceResponse>> subledgerPartyBalance(
-      @RequestParam PartyType partyType,
-      @RequestParam String partyId,
-      HttpServletRequest httpRequest) {
-    String shopId = resolveShop(httpRequest);
-    var balance = subledgerService.partyBalance(shopId, partyType, partyId);
-    String hint =
-        partyType == PartyType.VENDOR
-            ? "Vendor: positive = you owe supplier; negative = advance / overpayment credit."
-            : "Customer: positive = they owe you; negative = unapplied credit/advance.";
-    SubledgerPartyBalanceResponse dto =
-        new SubledgerPartyBalanceResponse(shopId, partyType, partyId, balance, hint);
-    return ResponseEntity.ok(ApiResponse.success(dto));
+  @GetMapping("/reports/profit-and-loss")
+  public ResponseEntity<ApiResponse<ProfitAndLossResponse>> profitAndLoss(
+      @RequestParam @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate from,
+      @RequestParam @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate to,
+      HttpServletRequest request) {
+    String shopId = resolveShop(request);
+    ProfitAndLossResponse out =
+        AccountingMapper.toResponse(financialReportsService.profitAndLoss(shopId, from, to));
+    return ResponseEntity.ok(ApiResponse.success(out));
   }
 
-  @GetMapping("/subledger/entries")
-  public ResponseEntity<ApiResponse<SubledgerEntriesPageResponse>> listSubledger(
-      @RequestParam(required = false) PartyType partyType,
-      @RequestParam(required = false) String partyId,
-      @RequestParam(defaultValue = "0") int page,
-      @RequestParam(defaultValue = "20") int size,
-      HttpServletRequest httpRequest) {
-    String shopId = resolveShop(httpRequest);
-    Page<SubledgerEntry> p = subledgerService.listEntries(shopId, partyType, partyId, page, size);
-    List<SubledgerEntriesPageResponse.EntryRow> rows =
-        p.getContent().stream().map(AccountingMapper::toRow).collect(Collectors.toList());
-    SubledgerEntriesPageResponse wrap =
-        new SubledgerEntriesPageResponse(
-            rows, p.getNumber(), p.getSize(), p.getTotalElements(), p.getTotalPages());
-    return ResponseEntity.ok(ApiResponse.success(wrap));
+  @GetMapping("/reports/balance-sheet")
+  public ResponseEntity<ApiResponse<BalanceSheetResponse>> balanceSheet(
+      @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate asOf,
+      HttpServletRequest request) {
+    String shopId = resolveShop(request);
+    BalanceSheetResponse out =
+        AccountingMapper.toResponse(financialReportsService.balanceSheet(shopId, asOf));
+    return ResponseEntity.ok(ApiResponse.success(out));
   }
 
-  private static PostingLineDraft toDraft(PostJournalLineRequest l) {
-    return new PostingLineDraft(
-        l.getAccountCode(), l.getDebit(), l.getCredit(), l.getMemo(), l.getPartyType(), l.getPartyId());
+  // ---------------------------------------------------------------------------------------------
+  // Admin
+  // ---------------------------------------------------------------------------------------------
+
+  @PostMapping("/admin/backfill")
+  public ResponseEntity<ApiResponse<AccountingBackfillService.BackfillResult>> backfill(
+      @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate from,
+      @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate to,
+      @RequestParam(defaultValue = "false") boolean force,
+      HttpServletRequest request) {
+    String shopId = resolveShop(request);
+    String userId = (String) request.getAttribute("userId");
+    return ResponseEntity.ok(
+        ApiResponse.success(backfillService.backfill(shopId, userId, from, to, force)));
   }
 
   private static String resolveShop(HttpServletRequest request) {
